tests/cases_invalid/statements/.expected
error: invalid expression type
 --> ./cases_invalid/statements/assignment.shd:9:20
  |
9 |     assigned_var = imported;
  |     ------------   ^^^^^^^^
  |     |              |
  |     |              expression type is `bool`
  |     expected type is `i32`

error: invalid expression type
  --> ./cases_invalid/statements/assignment.shd:10:20
   |
10 |     assigned_var = 1.0;
   |     ------------   ^^^
   |     |              |
   |     |              expression type is `f32`
   |     expected type is `i32`

error: invalid expression type
  --> ./cases_invalid/statements/assignment.shd:11:20
   |
11 |     assigned_var = buf_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `bool`
   |     expected type is `i32`

error: invalid expression type
  --> ./cases_invalid/statements/assignment.shd:12:20
   |
12 |     assigned_var = var_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `u32`
   |     expected type is `i32`

error: invalid expression type
  --> ./cases_invalid/statements/assignment.shd:13:20
   |
13 |     assigned_buf = 1.0;
   |     ------------   ^^^
   |     |              |
   |     |              expression type is `f32`
   |     expected type is `i32`

error: invalid expression type
  --> ./cases_invalid/statements/assignment.shd:14:20
   |
14 |     assigned_buf = buf_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `bool`
   |     expected type is `i32`

error: invalid expression type
  --> ./cases_invalid/statements/assignment.shd:15:20
   |
15 |     assigned_buf = var_value;
   |     ------------   ^^^^^^^^^
   |     |              |
   |     |              expression type is `u32`
   |     expected type is `i32`

error: invalid assignment left value
  --> ./cases_invalid/statements/assignment.shd:16:5
   |
16 |     assigned_buf + 1 = 2;
   |     ^^^^^^^^^^^^^^^^
   |     |
   |     this should be a valid reference

error: missing return statement
 --> ./cases_invalid/statements/return.shd:1:38
  |
1 |   fn missing_return_with_body() -> i32 {
  |  _______________________________------_^
  | |                               |
  | |                               the function has a return type
2 | |     var a = 0;
3 | | }
  | | ^
  | |_|
  |   last statement should be a `return` statement

error: missing return statement
 --> ./cases_invalid/statements/return.shd:5:41
  |
5 |   fn missing_return_without_body() -> i32 {
  |  __________________________________------_^
  | |                                  |
  | |                                  the function has a return type
6 | | }
  | | ^
  | |_|
  |   last statement should be a `return` statement

error: invalid returned type
 --> ./cases_invalid/statements/return.shd:9:12
  |
8 | fn no_return_type_but_return_stmt() {
  |                                    - expected type is `<no return>`
9 |     return 0;
  |            ^
  |            |
  |            returned type is `i32`

error: invalid returned type
  --> ./cases_invalid/statements/return.shd:13:12
   |
12 | fn return_type_and_invalid_returned_value() -> i32 {
   |                                            ------- expected type is `i32`
13 |     return 0u;
   |            ^^
   |            |
   |            returned type is `u32`

error: `return` statement before end of the block
  --> ./cases_invalid/statements/return.shd:18:5
   |
18 |     return 0u;
   |     ^^^^^^^^^^
   |     |
   |     only allowed at the end of a block

error: `return` statement used outside a function
  --> ./cases_invalid/statements/return.shd:24:5
   |
24 |     return 0; // not allowed outside functions
   |     ^^^^^^^^^
   |     |
   |     not allowed statement

error: `return` statement used outside a function
  --> ./cases_invalid/statements/return.shd:28:5
   |
28 |     return 0; // not allowed outside functions
   |     ^^^^^^^^^
   |     |
   |     not allowed statement

error: undefined item
 --> ./cases_invalid/statements/unknown_var_ident.shd:6:21
  |
6 |     var var_value = missing;
  |                     ^^^^^^^
  |                     |
  |                     `missing` variable is undefined

error: undefined item
 --> ./cases_invalid/statements/unknown_var_ident.shd:7:17
  |
7 |     var_value = missing;
  |                 ^^^^^^^
  |                 |
  |                 `missing` variable is undefined

error: undefined item
 --> ./cases_invalid/statements/unknown_var_ident.shd:8:17
  |
8 |     var_value = unused_value;
  |                 ^^^^^^^^^^^^
  |                 |
  |                 `unused_value` variable is undefined

error: undefined item
 --> ./cases_invalid/statements/unknown_var_ident.shd:9:5
  |
9 |     missing = 10;
  |     ^^^^^^^
  |     |
  |     `missing` variable is undefined